@@ -2,6 +2,7 @@
 ======
 
  - Send trades to your groups
+ - Invite people to your reminders
 
 0.9.84
 ======
